yws_가중치조절자동화

--- a/django/ui/templates/ui/my_note_perfume.html
+++ b/django/ui/templates/ui/my_note_perfume.html
@@ -42,7 +42,7 @@
 
   <!-- 완료 버튼 (피그마처럼 우측 하단) -->
   <div class="mynote-footer">
-    <button class="mynote-complete-btn" onclick="completeMyNote()">완료</button>
+    <button class="mynote-complete-btn" onclick="completeMyNote()">다음</button>
   </div>
 
 </div>
