--- a/django/ui/templates/ui/my_note_style.html
+++ b/django/ui/templates/ui/my_note_style.html
@@ -166,7 +166,7 @@
 
     <!-- 제출 버튼 -->
     <div class="submit-container">
-        <button class="submit-btn" onclick="submitSelection()">완료</button>
+        <button class="submit-btn" onclick="submitSelection()">다음</button>
     </div>
 </div>
 
